Closed
Bug 1408256
Opened 8 years ago
Closed 6 years ago
max-fs does not work when reusing RTCpeerconnection
Categories
(Core :: WebRTC: Networking, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla73
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: xpeng, Assigned: bwc)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:56.0) Gecko/20100101 Firefox/56.0
Build ID: 20170926190823
Steps to reproduce:
1. use max-fs to control the resolution in sdp first time
2. reuse the RTCpeerconnection and use the max-fs to control the resolution in sdp
the demo we can not provide right now. if you can not find the issue without demo we will provide the demo as soon as possible .
Actual results:
It works in step 1, but do not work in step 2.
Expected results:
max-fs should control the resolution normally when reusing RTCpeerconnection
Updated•8 years ago
|
Component: Untriaged → WebRTC: Networking
Product: Firefox → Core
Comment 1•8 years ago
|
||
Not sure what exactly you mean by "reuse". To me that would be closing a PeerConnection and then try to use it again. But since you can't use a once closed PeerConnection any more I assume "reuse" mean renegotitation of some form. Can you tell us more about what get renegotiated here?
Did a re-offer only try to change the max-fs parameter? Or did the m-section get disabled and then re-enabled later with a different max-fs value?
Did this ever work in a previous release of Firefox?
Rank: 35
Flags: needinfo?(xpeng)
Priority: -- → P3
the max-fs works well in firefox 55 and before.
the implement of reusing peerconnection follows the blog: https://hacks.mozilla.org/2015/03/webrtc-in-firefox-38-multistream-and-renegotiation/
Flags: needinfo?(xpeng)
| Assignee | ||
Comment 3•6 years ago
|
||
Updated•6 years ago
|
Assignee: nobody → docfaraday
| Assignee | ||
Comment 4•6 years ago
|
||
Depends on D55889
| Assignee | ||
Comment 5•6 years ago
|
||
| Assignee | ||
Comment 6•6 years ago
|
||
Try push never ran anything. Here's another.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=e3c90be45234f9162578fed677833232fd9ab7d7
| Assignee | ||
Comment 7•6 years ago
|
||
Marking as blocking 1591199, because the patches on that bug fail tests due to this bug.
Blocks: 1591199
| Assignee | ||
Comment 8•6 years ago
|
||
Seeing some leaks in that try push, trying a push for the base revision here:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=671258ba18df7a5ebb7369bd92d2e733641c307d
| Assignee | ||
Updated•6 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 9•6 years ago
|
||
Hooray, try push in comment 8 didn't run anything. Getting really sick of that bug.
| Assignee | ||
Comment 10•6 years ago
|
||
Comment 11•6 years ago
|
||
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bfbff4e80023
Tests for bug. r=dminor
https://hg.mozilla.org/integration/autoland/rev/b2134c0ea6e8
Fix bug where renegotiation would un-set a previously negotiated max-fs. r=dminor
Comment 12•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/bfbff4e80023
https://hg.mozilla.org/mozilla-central/rev/b2134c0ea6e8
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Updated•5 years ago
|
Regressions: CVE-2020-12416
You need to log in
before you can comment on or make changes to this bug.
Description
•