Bug 1408256: Fix bug where renegotiation would un-set a previously negotiated max-fs. r=dminor

Differential Revision: https://phabricator.services.mozilla.com/D55890

--HG--
extra : moz-landing-system : lando